Ajout de documentation

--- a/docs/src/OpenGL_3D_Engine_Manual.tex
+++ b/docs/src/OpenGL_3D_Engine_Manual.tex
@@ -413,6 +413,7 @@ $$
 $$
 
 \subsection{Modélisation des différentes quantités}
+[WORK IN PROGRESS]
 
 \chapter{Le moteur de jeu}
 \section{Structure du moteur de jeu}
