Le compute shader commence à prendre forme

--- a/docs/src/OpenGL_3D_Engine_Manual.tex
+++ b/docs/src/OpenGL_3D_Engine_Manual.tex
@@ -538,6 +538,6 @@ Dans les faits, pour améliorer les performances nous allons executer l'algorith
 \end{algorithmic}
 \end{algorithm}
 
-Cet algorithme renvoit deux tables, \textbf{spatialLookup} et \textbf{startIndices}
+Cet algorithme renvoit deux tables, \textbf{spatialLookup} et \textbf{startIndices}.
 
 \end{document}
